# testproject

./: .env.example  .gitignore  README.md  db.sqlite3  docker-compose.yml  install_rabit.sh  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2025_08_05_1845-6207cf5a46e3_initial_migration.py  2025_08_05_1855-init_package_types.py
backend/app/: asgi.py  configure.py
backend/app/business/: __init__.py  currency_service.py  package_service.py
backend/app/console/: __init__.py  base.py  check_db_connection.py
backend/app/core/: __init__.py  cache.py  celery_client.py  openapi.py  rabbitmq_service.py
backend/app/core/database/: __init__.py  base.py  engine.py  manager.py
backend/app/endpoints/: __init__.py  admin_endpoint.py  healthcheck_endpoint.py  packages_endpoint.py
backend/app/middleware/: __init__.py  database.py  session.py
backend/app/models/: __init__.py  package.py  package_type.py
backend/app/models/mixins/: __init__.py  int_id_mixin.py
backend/app/schemas/: __init__.py  package.py  package_type.py
backend/app/settings/: __init__.py
backend/app/settings/logger/: __init__.py
backend/app/utils/: __init__.py  safe_strtobool.py
backend/celery_app/: app.py
backend/celery_app/decorators/: __init__.py  database.py  run_coroutine.py
backend/celery_app/tasks/: __init__.py  delivery_cost_tasks.py  rabbitmq_tasks.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_packages_endpoints.py
messaging/: admin.py  models.py  (+6 more)
(+4 files in other folders)
